Closed
Bug 1013769
Opened 12 years ago
Closed 12 years ago
BasicCompositor draws scaled layers with masks incorrectly
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla32
People
(Reporter: mattwoodrow, Assigned: mattwoodrow)
References
()
Details
Attachments
(1 file)
|
2.11 KB,
patch
|
cwiiis
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Shows up on the provided URL.
Attachment #8426039 -
Flags: review?(chrislord.net)
Comment 1•12 years ago
|
||
Comment on attachment 8426039 [details] [diff] [review]
fix-mask
Review of attachment 8426039 [details] [diff] [review]:
-----------------------------------------------------------------
Perhaps this is the same as bug 996093?
Attachment #8426039 -
Flags: review?(chrislord.net) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Don't think so, I've commented on that bug.
| Assignee | ||
Comment 3•12 years ago
|
||
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 6•12 years ago
|
||
This has seemingly fixed the jumpy throbbers that I reported on bug 1016621 which is a duplicate of bug 1016643 that is a duplicate of this bug.
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140528030219 CSet: e017c15325ae
Status: RESOLVED → VERIFIED
Comment 8•12 years ago
|
||
Comment on attachment 8426039 [details] [diff] [review]
fix-mask
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 1023677 (actually it uncovered a bug regressed somewhere else)
User impact if declined: jumping/shaking animations for FF31 (ESR)
Testing completed (on m-c, etc.): patch is on aurora
Risk to taking this patch (and alternatives if risky): small since the patch is on aurora but has the potential to cause regression with layer transform.
String or IDL/UUID changes made by this patch: none
See this comment for rational:
https://bugzilla.mozilla.org/show_bug.cgi?id=1023677#c2
Attachment #8426039 -
Flags: approval-mozilla-beta?
Updated•12 years ago
|
Updated•12 years ago
|
Attachment #8426039 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•12 years ago
|
||
Comment 10•12 years ago
|
||
Backed out for bustage across all platforms.
https://hg.mozilla.org/releases/mozilla-beta/rev/4f6275d30116
https://tbpl.mozilla.org/php/getParsedLog.php?id=41877755&tree=Mozilla-Beta
I'll also remind you that tree rules explicitly state that *you* are to watch your pushes when pushing to the release branches. Given the length of time the tree was busted, it seems unlikely that was the case. Please be more respectful towards the rules in the future.
Comment 11•12 years ago
|
||
Sorry =\
I'm going to see locally how much we need to pull in to get this fixed on beta and rebased this patch. If the costs are high we will re-evaluate.
Comment 12•12 years ago
|
||
Looks like we're using missing a new utility function to Matrix.h:
https://tbpl.mozilla.org/?tree=Try&rev=70e817fea5d7
Comment 13•12 years ago
|
||
Comment 14•12 years ago
|
||
I've verified the fix by covering scenarios in bugs: 1016621, 1016643, 1017128, and 1014764.
I was able to reproduce the issues described in the bugs on Windows XP x86 and Windows 7 x64, using Nightly build from 2014-05-26, with Hardware Acceleration unchecked in the Options menu, and layers.offmainthreadcomposition.enabled = false.
The issues no longer reproduced on Firefox 31 Beta 4 (BuildID: 20140623175014), Latest Firefox 32 Aurora and Latest Firefox 33 Nightly. Verified on: Windows XP x86, Windows 7 x64, Mac OS 10.6.8, Ubuntu 13.04 x64.
Keywords: verifyme
You need to log in
before you can comment on or make changes to this bug.
Description
•