Bug 1013769 - Apply render target offset after the layer transform in BasicCompositor. r=Cwiiis a=sledru